2007-07-29  Marko Anastasov  <marko@marko.anastasov.name>

	* gtk/src/gtk_docs_override.xml: Corrected mismatched tag
	for PageSetup::save_to_file().

2.11.6:

2007-07-28  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs_override.xml: Corrected the 
	documentation for
	AboutDialog::get_program_name(), get_website_label(),
	CellLayout::get_cells(), 
	EntryCompletion::get_completion_prefix(), 
	IconTheme::choose_icon(), list_contexts(), 
	IconView::set_tooltip_cell(), set_tooltip_item(), 
	PageSetup::save_to_file(), 
	PrinterSettings::save_to_file(), request_details(), 
	Widget::error_bell(), get_tooltip_markup(), 
	get_tooltip_text(), 
	* gtk/src/iconview.hg: Added a set_tooltip_cell() method 
	overload without the cell parameter.
	* gtk/src/settings.hg: Added new properties:
	gtk-modules, gtk-cursor-theme-name, 
	gtk-cursor-theme-size, gtk-alternative-button-order, 
	gtk-alternative-sort-arrows, gtk-show-input-method-menu, 
	gtk-show-unicode-menu, gtk-timeout-initial, 
	gtk-timeout-repeat, gtk-timeout-expand, 
	gtk-color-scheme, gtk-enable-animations, 
	gtk-touchscreen-mode, gtk-tooltip-timeout, 
	gtk-tooltip-browse-timeout, gtk-tooltip-browse-mode-timeout, 
	gtk-keynav-cursor-only, gtk-keynav-wrap-around, 
	gtk-error-bell, gtk-color-hash, 
	gtk-file-chooser-backend, gtk-print-backends, 
	gtk-print-preview-command, gtk-enable-mnemonics, 
	gtk-enable-accels, gtk-recent-files-limit.

2007-07-28  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/builder.hg: Removed get_type_from_name() because it 
	seems only useful when implementing GTK+ widgets.
	* gtk/src/gtk_docs_override.xml: Corrected the 
	gtk_page_setup_to_key_file() and gtk_print_settings_to_key_file() 
	documentation.
	* gtk/src/pagesetup.ccg:
	* gtk/src/pagesetup.hg:  Added a save_to_key_file() method 
	overload without the group parameter. 
	* gtk/src/printsettings.ccg:
	* gtk/src/printsettings.hg: Renamed to_key_file() to save_to_key_file() 