@@ -402,6 +402,7 @@ if test "x$enable_examples" = "xyes"; then
         examples/book/textview/Makefile
         examples/book/timeout/Makefile
         examples/book/toolbar/Makefile
+        examples/book/tooltips/Makefile
         examples/book/treeview/Makefile
           examples/book/treeview/combo_renderer/Makefile
           examples/book/treeview/editable_cells/Makefile
