@@ -4,7 +4,7 @@ SUBDIRS = alignment aspectframe box builder buttonbox \
 		  entry eventbox expander frame helloworld helloworld2 \
 		  iconview idle input label menus menus_and_toolbars notebook paned printing progressbar \
 		  range_widgets recent_files scrolledwindow signals socket spinbutton statusicon \
-		  table textview timeout toolbar treeview update_ui
+		  table textview timeout toolbar tooltips treeview update_ui
 
 #deprecated: combo
 
