@@ -1,5 +1,14 @@
 2007-07-29  Marko Anastasov  <marko@marko.anastasov.name>
 
+	* configure.in:
+	* examples/book/Makefile.am:
+	* examples/book/tooltips/Makefile.am:
+	* examples/book/tooltips/examplewindow.[cc|h]:
+	* examples/book/tooltips/main.cc: Added an example for the new
+	tooltips API.
+
+2007-07-29  Marko Anastasov  <marko@marko.anastasov.name>
+
 	* gtk/src/gtk_docs_override.xml: Corrected mismatched tag
 	for PageSetup::save_to_file().
 
